# AegisRAG

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  aggregated-review-enterprise-login.md  aggregated-review-r2-enterprise-login.md  aggregated-review-r3-enterprise-login.md  aggregated-review-r4-enterprise-login.md  alembic.ini  coverage.xml  loc.json  project-context.md  pyproject.toml  security-audit-enterprise-login.md
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-18_162000-enterprise-login.md
_bmad/: config.toml
_bmad-output/implementation-artifacts/: 1-1-set-up-initial-project-from-starter-template-初始化生产级-fastapi-monorepo.md  1-2-统一-api-envelope-与健康检查.md  1-3-requestcontext-与-authcontext-注入.md  1-4-结构化错误-日志与审计基础.md  1-5-最小数据库迁移与基础治理表.md  1-6-docker-compose-本地启动核心依赖.md  2-1-授权文档上传与异步-ingestion-job.md  2-2-parser-协议与-markdown-txt-解析.md  2-3-pdf-docx-parser-与页码-metadata.md  2-4-cleaner-与-dedup.md  2-5-fixedsizechunker.md  2-6-chunk-metadata-contract-与持久化.md  2-7-embeddingprovider-抽象与-embedding-job.md  2-8-vectorstore-协议与-pgvector-写入.md  (+45 more)
apps/: __init__.py
docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  README.md  compose.yaml
docs/: EMPLOYMENT_PRODUCT_MARKET_OPTIMIZATION.md  TECHNICAL_PREFERENCES.md  evaluation.md  main-workbench-design-rules.md  technical-overview.md  公众号文章-AegisRAG优化实录.md
evaluation/: ab_retrieval.py  ab_retrieval_comparison.py  benchmark.py  benchmark_pipeline.py  eval_direct.py  eval_minimal.py  eval_ragas.py  eval_ragas_v2.py  evaluate.py  evaluate_patched.py  load_test.py  quick_eval.py  test_graph_rag.py
migrations/: env.py
scripts/: ci_verify.py  profile_hotspots.py  profile_retrieval.py  reset_passwords.py  test_bge_real.py
tests/: conftest.py
(+315 files in other folders)
