[project]
name = "local-rag-agent-system"
version = "0.1.0"
description = "Production-grade local multi-source RAG and agent question answering system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4,<2",
    "asyncpg>=0.30.0,<1",
    "fastapi[standard]>=0.136.3,<0.137",
    "httpx>=0.28.0,<1",
    "minio>=7.2.20,<8",
    "psycopg[binary]>=3.2.0,<4",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.10.0,<3",
    "pyjwt>=2.13.0,<3",
    "bcrypt>=4.0,<5",
    "pypdf>=6.12.2,<7",
    "python-docx>=1.2.0,<2",
    "python-multipart>=0.0.20,<1",
    "redis>=5.2.0,<6",
    "rq>=2.9.0,<3",
    "sqlalchemy>=2.0.50,<3",
    "structlog>=25.0.0,<26",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20,<1",
    "mypy>=1.19.0,<2",
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.2.0,<2",
    "ruff>=0.14.0,<1",
]
eval = [
    "ragas>=0.2.0,<1",
    "langchain-openai>=0.3.0,<1",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".agents",
    ".claude",
    ".venv",
    "_bmad",
    "_bmad-output",
    "design-artifacts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
mypy_path = "."
strict = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    "^\\.agents/",
    "^\\.venv/",
    "^_bmad/",
    "^_bmad-output/",
]
